--- a/webapp/app/views/welcome/index.html.erb
+++ b/webapp/app/views/welcome/index.html.erb
@@ -21,11 +21,14 @@
   <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
 <% end -%>
 
+<br/>
+<br/>
+<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+
 </div>
 
 <div class="registration">
 <h2>Sign up</h2>
-
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
