--- a/webapp/app/views/layouts/welcome.html.erb
+++ b/webapp/app/views/layouts/welcome.html.erb
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Picpool</title>
+  <title>Welcome Picpool</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= render :partial => "menu" %>
-<div class="menu">
-    <ol>
-        <li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
-    </ol>
-</div>
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
