--- a/webapp/app/views/layouts/welcome.html.erb
+++ b/webapp/app/views/layouts/welcome.html.erb
@@ -5,23 +5,34 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+      <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
-<body>
-
-<% if false %>
-<%= render :partial => "menu" %>
-<% end %>
-<div class="menu">
-    <ol>
-        <li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
-    </ol>
-</div>
-
-
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-
-<%= yield %>
-
-</body>
+  <body>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="navbar-inner">
+        <div class="container">
+          <%= link_to "PicPool", '#', id: "logo" %>
+          <nav>
+            <ul class="nav pull-right">
+              <li><%= link_to "Home",    '#' %></li>
+              <li><%= link_to "Help",    '#' %></li>
+              <li><%= link_to "Sign in", '#' %></li>
+              <li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <div class="container">
+      <%= yield %>
+    </div>
+  </body>
 </html>
+
+
+
+
+
+
