--- a/webapp/app/assets/stylesheets/custom.css.scss
+++ b/webapp/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,73 @@
 @import "bootstrap";
+
+
+
+/* universal */
+
+html {
+  overflow-y: scroll;
+}
+
+body {
+  padding-top: 60px;
+}
+
+section {
+  overflow: auto;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.center {
+  text-align: center;
+}
+
+.center h1 {
+  margin-bottom: 10px;
+}
+
+
+/* typography */
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
+}
+
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 1.7em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: left;
+  font-weight: normal;
+  color: #999;
+}
+
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
+}
+
+
+.wrap {
+   width:100%;
+   margin:0 auto;
+}
+
+.login {
+    float: left;
+    width: 50%;
+}
+
+.registration {
+  float: right;
+    width: 50%;
+}
