--- a/webapp/app/assets/stylesheets/custom.css.scss
+++ b/webapp/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,22 @@
 @import "bootstrap";
 
+/* header */
 
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #fff;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+  line-height: 1;
+}
+
+#logo:hover {
+  color: #346346;
+  text-decoration: none;
+}
 
 /* universal */
 
