--- a/webapp/app/views/welcome/index.html.erb
+++ b/webapp/app/views/welcome/index.html.erb
@@ -36,7 +36,7 @@
 
     <br/>
     <br/>
-    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), class: "btn btn-large btn-primary" %>
 
 </div>
 
