--- a/webapp/app/views/welcome/index.html.erb
+++ b/webapp/app/views/welcome/index.html.erb
@@ -49,7 +49,7 @@
     <div>
         <%= f.label :email %>
         <br />
-        <%= f.email_field :email, :autofocus => true %>
+        <%= f.email_field :email%>
     </div>
 
     <div>
