--- a/webapp/app/assets/stylesheets/custom.css.scss
+++ b/webapp/app/assets/stylesheets/custom.css.scss
@@ -17,7 +17,37 @@
   color: #346346;
   text-decoration: none;
 }
+/* footer */
 
+footer {
+  margin-top: 45px;
+  
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #000;
+}
+
+footer a {
+  color: #555;
+}  
+
+footer a:hover { 
+  color: #222;
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 10px;
+}
 /* universal */
 
 html {
