--- a/webapp/app/views/layouts/application.html.erb
+++ b/webapp/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
         <div class="container">
             <%= yield %>
         </div>
+        <%= render 'layouts/footer' %>
     </body>
 </html>
 
