--- a/webapp/app/assets/stylesheets/custom.css.scss
+++ b/webapp/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,9 @@
 @import "bootstrap";
 
+$lightGray: #999;
+$grayMediumLight: #eaeaea;
+
+
 /* header */
 
 #logo {
@@ -11,43 +15,40 @@
   padding-top: 9px;
   font-weight: bold;
   line-height: 1;
+  &:hover {
+    color: #346346;
+  text-decoration: none;
+  }
 }
 
-#logo:hover {
-  color: #346346;
-  text-decoration: none;
-}
 /* footer */
 
 footer {
   margin-top: 45px;
-  
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
-  color: #000;
+  border-top: 1px solid $grayMediumLight;
+  color: $grayLight;
+  a {
+    color: $gray;
+    &:hover {
+      color: $grayDarker;
+    }
+  }
+  
+  small {
+    float: left;
+  }
+    
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 10px
+    }
+  } 
 }
 
-footer a {
-  color: #555;
-}  
-
-footer a:hover { 
-  color: #222;
-}
-
-footer small {
-  float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 10px;
-}
 /* universal */
 
 html {
@@ -68,12 +69,10 @@ textarea {
 
 .center {
   text-align: center;
+  h1 {
+    margin-bottom: 10px;
+  }  
 }
-
-.center h1 {
-  margin-bottom: 10px;
-}
-
 
 /* typography */
 
@@ -94,7 +93,7 @@ h2 {
   margin-bottom: 30px;
   text-align: left;
   font-weight: normal;
-  color: #999;
+  color: $grayLight;
 }
 
 p {
