--- a/webapp/app/assets/stylesheets/custom.css.scss
+++ b/webapp/app/assets/stylesheets/custom.css.scss
@@ -26,6 +26,8 @@ $grayMediumLight: #eaeaea;
 footer {
   margin-top: 45px;
   padding-top: 5px;
+  margin-left: 50px;
+  margin-right: 50px;
   border-top: 1px solid $grayMediumLight;
   color: $grayLight;
   a {
