--- a/webapp/app/views/layouts/_footer.html.erb
+++ b/webapp/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="foote navbar-fixed-bottom">
+<footer class="footer navbar-fixed-bottom">
   <small>
     <a href="http://ruby.railstutorial.org/chapters/beginning#top">Rails Tutorial</a>
     by Michael Hartl
