--- a/webapp/app/assets/stylesheets/custom.css.scss
+++ b/webapp/app/assets/stylesheets/custom.css.scss
@@ -80,6 +80,15 @@ textarea {
   }  
 }
 
+/*
+.navbar-inner {
+  background-color: #2c2c2c; 
+  background-image: none;
+  background-repeat: no-repeat;
+  filter: none;
+}*/
+
+
 .hero-unit {
   background-color: $white
 /*
