--- a/webapp/app/views/pools/_form.html.erb
+++ b/webapp/app/views/pools/_form.html.erb
@@ -27,8 +27,8 @@
 
     <div class=" fileupload-buttonbar">
       <div class="progressbar fileupload-progressbar nofade"><div style="width:0%;"></div></div>
-      <span class="btn btn-mini fileinput-button">
-        <i class="icon-plus"></i>
+      <span class="btn fileinput-button">
+        <i class="icon-plus icon-white"></i>
         <span><%= t('pools.add_files') %>...</span>
         <%= f.file_field :image, :multiple => true %>
       </span>
