--- a/webapp/app/views/pools/show.html.erb
+++ b/webapp/app/views/pools/show.html.erb
@@ -20,8 +20,8 @@
   <div class="row">
     <div class=" fileupload-buttonbar">
       <div class="progressbar fileupload-progressbar nofade"><div style="width:0%;"></div></div>
-      <span class="btn btn-mini fileinput-button">
-        <i class="icon-plus"></i>
+      <span class="btn fileinput-button">
+        <i class="icon-plus icon-white"></i>
         <span><%= t('photos.add_files') %>...</span>
         <%= f.file_field :image, :multiple => true %>
       </span>
@@ -39,14 +39,20 @@
                 </a>
                 <div class="caption">
                   <p style="text-align: center;">
-                    <a href="/pools/<%= @pool.id %>/photos/<%= pic.id %>/edit" class="btn btn-mini">
-                      <i class="icon-edit "></i>
+                    <a href="/pools/<%= @pool.id %>/photos/<%= pic.id %>/edit" class="btn">
+                      <i class="icon-edit icon-white"></i>
                       Edit
                     </a>
-                    <a class="btn btn-mini btn-delete" confirm="Вы уверены?" data-method="delete" href="/pools/<%= @pool.id %>/photos/<%= pic.id %>" data-remote=true>
-                      <i class="icon-trash"></i>
-                      Delete
-                    </a>
+                   <!--
+                    <a class="btn btn-delete" confirm="Вы уверены?" data-method="delete" href="/pools/<%= @pool.id %>/photos/<%= pic.id %>" data-remote=true>
+                                         <i class="icon-trash icon-white"></i>
+                                         Delete
+                                       </a>
+-->
+                   <%= link_to "delete", pool, method: :delete,
+                                     data: { confirm: "You sure?" },
+                                     title: pool.name %>
+
                   </p>
                 </div>
               </div>
