--- a/webapp/app/assets/stylesheets/custom.css.scss
+++ b/webapp/app/assets/stylesheets/custom.css.scss
@@ -90,11 +90,11 @@ textarea {
 
 
 .hero-unit {
-  background-color: $white
-/*
+  //background-color: $white
+
   background-image: url(acid-kiss-lsdex.gif);    
   background-repeat:repeat-x;
-*/
+
 
 }
 
