--- a/webapp/app/views/photos/index.html.erb
+++ b/webapp/app/views/photos/index.html.erb
@@ -23,12 +23,12 @@
         <td><%=l photo.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_photo_path(photo), :class => 'btn btn-mini' %>
+                      edit_photo_path(photo), :class => 'btn' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       photo_path(photo),
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
+                      :class => 'btn  btn-danger' %>
         </td>
       </tr>
     <% end %>
