--- a/webapp/app/views/pools/index.html.erb
+++ b/webapp/app/views/pools/index.html.erb
@@ -12,8 +12,8 @@
                 <div class="caption">
                     <p style="text-align: center;">
                         <%= pool.name.truncate(14) %>
-                        <a class="btn" href="<%= edit_pool_path(:id => pool.id) %>"><i class="icon-edit icon-white"></i> Edit</a>
-                        <a class="btn" confirm="Вы уверены?" data-method="delete" href="<%= pool_path(:id => pool.id) %>"><i class="icon-trash icon-white"></i> Delete</a>
+                        <a class="btn" href="<%= edit_pool_path(:id => pool.id) %>"><i class="icon-edit"></i> Edit</a>
+                        <a class="btn" confirm="Вы уверены?" data-method="delete" href="<%= pool_path(:id => pool.id) %>"><i class="icon-trash"></i> Delete</a>
                     </p>
                 </div>
             </div>
@@ -21,5 +21,5 @@
         <% end %>
     </ul>
 
-    <%= link_to 'New', new_pool_path, :class => 'btn btn-mini' %>
+    <%= link_to 'New', new_pool_path, :class => 'btn' %>
 </div>
