--- a/webapp/app/views/pools/show.html.erb
+++ b/webapp/app/views/pools/show.html.erb
@@ -22,7 +22,7 @@
         <div class="progressbar fileupload-progressbar nofade">
             <div style="width:0%;"></div>
         </div>
-        <span class="btn fileinput-button"> <i class="icon-plus icon-white"></i> <span><%= t('photos.add_files') %>...</span> <%= f.file_field :image, :multiple => true %> </span>
+        <span class="btn fileinput-button"> <i class="icon-plus"></i> <span><%= t('photos.add_files') %>...</span> <%= f.file_field :image, :multiple => true %> </span>
     </div>
 </div>
 <br>
@@ -35,9 +35,9 @@
                 <a href="<%= pic.image.url %>" rel="lightbox-photos" title="<%= pic.description %>"> <img src="<%= pic.image.thumb.url %>" alt=""> </a>
                 <div class="caption">
                     <p style="text-align: center;">
-                        <a href="/pools/<%= @pool.id %>/photos/<%= pic.id %>/edit" class="btn"> <i class="icon-edit icon-white"></i> Edit </a>
+                        <a href="/pools/<%= @pool.id %>/photos/<%= pic.id %>/edit" class="btn"> <i class="icon-edit"></i> Edit </a>
 
-                        <a class="btn btn-delete" confirm="Вы уверены?" data-method="delete" href="/pools/<%= @pool.id %>/photos/<%= pic.id %>" data-remote=true> <i class="icon-trash icon-white"></i> Delete </a>
+                        <a class="btn btn-delete" confirm="Вы уверены?" data-method="delete" href="/pools/<%= @pool.id %>/photos/<%= pic.id %>" data-remote=true> <i class="icon-trash"></i> Delete </a>
 
                     </p>
                 </div>
@@ -92,8 +92,8 @@
 
 <div class="row">
     <div class="form-actions">
-        <%= link_to 'Back', pools_path, :class => 'btn btn-mini'  %>
-        <%= link_to 'Edit', edit_pool_path(@pool), :class => 'btn btn-mini' %>
-        <%= link_to 'Delete', pool_path(@pool), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-mini' %>
+        <%= link_to 'Back', pools_path, :class => 'btn'  %>
+        <%= link_to 'Edit', edit_pool_path(@pool), :class => 'btn' %>
+        <%= link_to 'Delete', pool_path(@pool), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn' %>
     </div>
 </div>
