--- a/webapp/app/assets/stylesheets/photos.css
+++ b/webapp/app/assets/stylesheets/photos.css
@@ -1,3 +1,4 @@
+/*
 .preview {
   height: 100px;
 }
@@ -23,6 +24,7 @@
   height: 137px;
 }
 
+
 .progress {
   height: 8px;
   margin-top: 10px;
@@ -40,3 +42,4 @@ img {
 .form-horizontal input.text_field {
   width: 600px;
 }
+*/
