remove pools, simplify

--- a/webapp/app/assets/stylesheets/custom.css.scss
+++ b/webapp/app/assets/stylesheets/custom.css.scss
@@ -92,8 +92,10 @@ textarea {
 .hero-unit {
   //background-color: $white
 
+/*
   background-image: url(acid-kiss-lsdex.gif);    
-  background-repeat:repeat-x;
+  background-repeat:repeat-x;*/
+
 
 
 }
