--- a/webapp/app/views/photos/index.html.erb
+++ b/webapp/app/views/photos/index.html.erb
@@ -115,8 +115,7 @@
 <script type="text/javascript" charset="utf-8">
   $(function () {
       // Initialize the jQuery File Upload widget:
-      $('#fileupload').fileupload();
-      
+      $('#fileupload').fileupload({ paramName: 'photo[photo]'});
       // 
       // Load existing files:
       $.getJSON($('#fileupload').prop('action'), function (files) {
