--- a/webapp/app/views/layouts/_header.html.erb
+++ b/webapp/app/views/layouts/_header.html.erb
@@ -9,6 +9,9 @@
                     </li>
 
                     <li>
+                        <%= link_to "Photos",    photos_path %>
+                    </li>
+                    <li>
                         <%= link_to "Sign in", '#' %>
                     </li>
                     <li>
