--- a/webapp/app/views/layouts/_footer.html.erb
+++ b/webapp/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
-<footer class="footer navbar-fixed-bottom">
+<div class="container">
+<footer class="footer">
   <small>
     <a href="http://ruby.railstutorial.org/chapters/beginning#top">Rails Tutorial</a>
     by Michael Hartl
@@ -11,4 +12,5 @@
     </ul>
   </nav>
 </footer>
+
 
