--- a/webapp/app/views/layouts/welcome.html.erb
+++ b/webapp/app/views/layouts/welcome.html.erb
@@ -8,12 +8,19 @@
         <%= render 'layouts/shim' %>
     </head>
     <body>
-        <%= render 'layouts/header' %>
-        <div class="container">
-            <%= yield %>
-            <%= render 'layouts/footer' %>
+        <div id="wrap">
+
+            <%= render 'layouts/header' %>
+
+            <div class="container">
+                <%= yield %>
+            </div>
+
+            <div id="push"></div>
         </div>
-        
+
+        <%= render 'layouts/footer' %>
+
     </body>
 </html>
 
