--- a/webapp/app/assets/stylesheets/custom.css.scss
+++ b/webapp/app/assets/stylesheets/custom.css.scss
@@ -23,8 +23,12 @@ $grayMediumLight: #eaeaea;
 
 /* footer */
 
-footer {
+#push {
+  height: 50px;
+}
 
+footer {
+  height: 50px;
   margin-top: 45px;
   padding-top: 5px;
 
@@ -65,6 +69,14 @@ body {
   background-repeat:repeat;
 
 }
+
+#wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -50px;
+      }
 
 section {
   overflow: auto;
