--- a/webapp/app/views/welcome/index.html.erb
+++ b/webapp/app/views/welcome/index.html.erb
@@ -35,8 +35,8 @@
     <% end -%>
 
     <br/>
-    <br/>
-    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), class: "btn btn-large btn-primary" %>
+
+    <%= link_to '<i class="icon-user icon-white"></i> Sign in with Facebook'.html_safe, user_omniauth_authorize_path(:facebook), style:'color:#FFFFFF;', class: "btn btn-primary" %>
 
 </div>
 
