pools first commit

--- a/webapp/app/views/layouts/_header.html.erb
+++ b/webapp/app/views/layouts/_header.html.erb
@@ -7,7 +7,9 @@
                     <li>
                         <%= link_to "Home",    root_path %>
                     </li>
-
+                    <li>
+                        <%= link_to "Pools",    pools_path %>
+                    </li>
                     <li>
                         <%= link_to "Photos",    photos_path %>
                     </li>
