--- a/webapp/app/views/layouts/application.html.erb
+++ b/webapp/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
             <%= render 'layouts/header' %>
             <div class="container">
+                <div id="push"></div>
                 <%= yield %>
 
             </div>
