--- a/webapp/app/views/photos/index.html.erb
+++ b/webapp/app/views/photos/index.html.erb
@@ -1,5 +1,5 @@
 <h2>Upload photos</h2>
-<%= form_for Photo.new, :html => { :multipart => true, :id => "fileupload"  } do |f| %>
+<%= form_for [@pool, Photo.new], :html => { :multipart => true, :id => "fileupload"  } do |f| %>
 <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the photo -->
 <div class="row fileupload-buttonbar">
     <div class="span7">
