photos back button

--- a/webapp/app/views/photos/index.html.erb
+++ b/webapp/app/views/photos/index.html.erb
@@ -33,6 +33,8 @@
 <table class="table table-striped">
     <tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
 </table>
+
+<%= link_to 'Back', @pool %>
 <% end %>
 
 <script>
