--- a/webapp/app/views/layouts/_header.html.erb
+++ b/webapp/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
                         <%= link_to "Home",    root_path %>
                     </li>
                     <li>
-                        <%= link_to "Pools",    pools_path %>
+                        <%= link_to "Users",    users_path %>
                     </li>
                     <li>
                         <%= link_to "Sign in", '#' %>
