--- a/webapp/app/views/pools/new.html.erb
+++ b/webapp/app/views/pools/new.html.erb
@@ -1,5 +1,38 @@
 <h2>New pool</h2>
 
-<%= render 'form' %>
+<%= form_for([@user, @pool]) do |f| %>
+  <% if @pool.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@pool.errors.count, "error") %> prohibited this pool from being saved:</h2>
 
-<%= link_to 'Back', pools_path %>
+      <ul>
+      <% @pool.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, :autofocus => true %>
+  </div>
+  <div class="field">
+    <%= f.label :description %><br />
+    <%= f.text_area :description %>
+  </div>
+
+  <div class="field">
+    <%= f.label :public %>
+    <%= f.check_box :public %>
+  </div>
+  <br />
+  <br />
+  <br />
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
+
+
+<%= link_to 'Back', user_pools_path(@user) %>
