--- a/webapp/app/views/users/index.html.erb
+++ b/webapp/app/views/users/index.html.erb
@@ -5,6 +5,7 @@
         <th>ID</th>
         <th>email</th>
         <th>Name</th>
+        <th>Confirmed data</th>
         <th></th>
         <th></th>
         <th></th>
@@ -15,9 +16,8 @@
         <td><%= user.id %></td>
         <td><%= user.email %></td>
         <td><%= user.fb_name %></td>
+        <td><%= user.confirmed_at%></td>
         <td><%= link_to 'Pools', user_pools_path(user) %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
     <% end %>
 </table>
