--- a/webapp/app/views/layouts/_header.html.erb
+++ b/webapp/app/views/layouts/_header.html.erb
@@ -3,29 +3,44 @@
         <div class="container">
             <%= link_to "PicPool", root_path, id: "logo" %>
             <nav>
-     <!--            <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %> -->
                 <ul class="nav pull-right">
 
-<!--
-                    <li>
-                        <%= f.label :email, style:'color:#FFFFFF;' %>
-                        <%= f.email_field :email, :autofocus => true %>
-                        <% if devise_mapping.rememberable? -%>
-                            <%= f.check_box :remember_me %> <%= f.label :remember_me, style:'color:#FFFFFF;' %>
-                        <% end -%>
+                    <%if !user_signed_in?%>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In</a>
+                        <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+                            <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
+                            <div>
+                                <%= f.label :email %>
+                                <br />
+                                <%= f.email_field :email, :autofocus => true %>
+                            </div>
+
+                            <div>
+                                <%= f.label :password %>
+                                <br />
+                                <%= f.password_field :password %>
+                            </div>
+
+                            <% if devise_mapping.rememberable? -%>
+                            <div>
+                                <%= f.check_box :remember_me %> <%= f.label :remember_me %>
+                            </div>
+                            <% end -%>
+
+                            <div>
+                                <%= f.submit "Sign in" %>
+                            </div>
+
+                            <% end -%>
+
+                            <%= link_to '<i class="icon-user icon-white"></i> Sign in with Facebook'.html_safe, user_omniauth_authorize_path(:facebook), style:'color:#FFFFFF;', class: "btn btn-primary" %>
+
+                            <br/>
+                            <br/>
 
                     </li>
-                    <li>
-                        <%= f.label :password, style:'color:#FFFFFF;' %>
-                        <%= f.password_field :password %>
-
-                    </li>
-                    <li>
-                        <div>
-                            <%= f.submit "Sign in" %>
-                        </div>
-                    </li>-->
-
+                    <% end -%>
                     <li>
                         <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
                     </li>
@@ -33,7 +48,6 @@
                         <%= link_to "Users",    users_path %>
                     </li>
                 </ul>
-           <!--     <% end -%> -->
             </nav>
         </div>
     </div>
