--- a/webapp/app/views/layouts/_menu.html.erb
+++ b/webapp/app/views/layouts/_menu.html.erb
@@ -1,6 +1,8 @@
 <div class="menu">
     <ol>
-        <li style="display: inline;"><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
+        <li style="display: inline;">
+            <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
+        </li>
     </ol>
 </div>
 
