--- a/webapp/app/views/layouts/_header.html.erb
+++ b/webapp/app/views/layouts/_header.html.erb
@@ -47,6 +47,9 @@
                     <li>
                         <%= link_to "Users",    users_path %>
                     </li>
+					<li>
+						<%= link_to "dropbox", dp_login_path %>
+					</li>
                 </ul>
             </nav>
         </div>
